<resources>
    <string name="app_name">Diplomna</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_fragment">Splash fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="vhod">Вход за служители</string>
    <string name="zastrahovki">Автомобилни застраховки</string>
    <string name="company_name">AutoIns</string>
    <string name="spravka">Провери застраховка на автомобил</string>
    <string name="driving_license">Регистрационен номер*</string>
    <string name="search">Търси</string>
    <string name="nickname">Потребителско име*</string>
    <string name="password">Парола*</string>
    <string name="login">Влез</string>
    <string name="test">ТЕСТ/TEST</string>
    <string name="add_employee">Добави служител</string>
    <string name="update_employee">Редактирай служител</string>
    <string name="delete_employee">Изтрий служител</string>
    <string name="car">Лек автомобил</string>
    <string name="truck">Товарен автомобил</string>
    <string name="motorcycle">Мотоциклет</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="petQuestion">Името на домашния Ви любимец?</string>
    <string name="motherQuestion">Името на майка Ви?</string>
    <string name="jobQuestion">Името на първата Ви работа?</string>
    <string name="fatherQuestion">Родното място на баща Ви?</string>
    <string name="admin">Админ</string>
    <string name="insurer">Застраховател</string>
    <string name="yes">1</string>
    <string name="no">0</string>

</resources>