<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nickname"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_7x"
        android:layout_marginRight="@dimen/margin_3.5x"
        android:layout_marginLeft="@dimen/margin_3.5x"
        android:hint="@string/nickname"
        android:textColorHint="@color/orange"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/orange"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_3.5x"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginRight="@dimen/margin_3.5x"
        android:hint="@string/password"
        android:textColorHint="@color/orange"
        app:passwordToggleEnabled="true"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/orange"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:counterTextColor="@color/orange"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nickname">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Запомни ме"
        android:textSize="@dimen/size_2x"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintLeft_toLeftOf="@id/password"
        app:layout_constraintRight_toRightOf="@id/password" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/rememberMe"
        app:layout_constraintStart_toStartOf="@+id/rememberMe"
        app:layout_constraintTop_toBottomOf="@+id/rememberMe" />

    <TextView
        android:id="@+id/forgotten_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="Забравена парола?"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_2x"
        app:layout_constraintEnd_toEndOf="@+id/rememberMe"
        app:layout_constraintStart_toStartOf="@+id/rememberMe"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>